--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: white;
 }
 
 .NavBarClass{
@@ -8,17 +9,17 @@
 }
 
 .mainlinksClass{
-  background-color:whitesmoke ;
+  background-color:rgb(240, 245, 245) ;
   text-decoration: none;
   padding: 20px;
   width: auto;
-  height: 12px; 
+  height: 20px; 
   font-weight: bold;
 }
 
 .bodyTextClass{
   background-color: blue;
-  width: 1400px;
+  width: 1000px;
   height:40px;
   align-items: center;
   margin-left:250px ;
@@ -32,6 +33,11 @@
   color: rgb(241, 235, 235);
 }
 
+.bodyImageClass{
+
+  margin-top: -5em;
+}
+
 .cyberMondayDiv{
 
   /* background-color: white; */
@@ -41,21 +47,24 @@
   height: auto;
   padding-left:2em;
   padding-right:2em;
-  margin-left: 10%;
-  margin-top: -25em;
+  margin-left: 6;
+  margin-top: -40em;
   image-rendering:optimizeQuality;
 
 }
 
 .salesButtonClass{
+  display:flex;
+  justify-content:space-around;
+  margin-left: 4em;
   position: absolute;
   /* z-index: 3; */
   width: 30%;
   height: auto;
   padding-left:2em;
   padding-right:2em;
-  margin-left: 10%;
-  margin-top: -9em;
+  margin-left: 4;
+  margin-top: -16em;
   image-rendering:optimizeQuality;
 }
 
@@ -64,7 +73,19 @@
   font-weight: bold;
   font-size: medium;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+ 
 }
+
+.trailerButton{
+
+  background-color: rgb(20, 221, 236);
+  font-weight: bold;
+  font-size: medium;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  /* margin-top: -2em; */
+  
+}
+
 
 .secondBodyDiv{
   position: relative;
@@ -74,7 +95,8 @@
   display: flex;
   justify-content: space-around;
   background-color: rgb(179, 215, 247);
-  margin-left: 100px;
+  margin-left: 69px;
+  margin-top: -3em;
   padding-top: 2em;
   padding-right: 1em;
 }
@@ -116,14 +138,14 @@
 .thirdBodyDiv{
   position: relative;
   height: 700px;
-  width: 90%;
+  width: 91%;
   bottom: 0;
   /* display: flex; */
   justify-content: space-around;
   background-color: rgb(23, 6, 40);
-  margin-left: 100px;
-  margin-top: 2em;
   padding-top: 2em;
+  margin-left: 69px;
+  margin-top: 2em;
 }
 
 .thirdBodyImagesDiv{
@@ -158,9 +180,9 @@
   position: relative;
   border: skyblue;
   overflow-y: scroll;
-  width: 90%;
+  width: 91%;
   align-items: center;
-  margin-left: 100px;
+  margin-left: 71px;
 }
 
 .imgclass{
@@ -169,7 +191,7 @@
   border-color: aliceblue;
   /* border: 2px; */
   /* margin-left: 15px; */
-  margin-right: 10px; 
+  margin-right: 25px; 
 }
 
 .commingsoonimagesDiv{
@@ -179,9 +201,9 @@
   position: relative;
   border: skyblue;
   overflow-y: scroll;
-  width: 90%;
+  width: 91%;
   align-items: center;
-  margin-left: 100px;
+  margin-left: 71px;
 }
 
 .commingsoonimgclass{
@@ -189,17 +211,32 @@
   justify-content: space-around;
   border-color: aliceblue;
   /* border: 2px; */
-  /* margin-left: 15px; */
-  margin-right: 10px;
+  margin-left: 0px;
+  margin-right: 20px;
   margin-top: 30px;
+  
+}
+
+.imgclass:hover{
+  /* z-index: 1;
+  border: solid white;
+  border-radius: 5px;
+  transition-property: transform;
+  transition-duration: 0.1s;
+  transition:scale(1);
+  transition-delay: 0s;
+  transition-timing-function: ease; */
+  cursor: pointer;
 }
 
 .vacationDiv{
   margin-top: 3px;;
   background-color: rgb(247, 245, 241);
-  width: 90%;
-  margin-left: 100px;
-  margin-right: 100px;;
+  width: 91%;
+  margin-left: 71px;
+  margin-right: 100px;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 
 .vacationDiv2Class{
@@ -210,10 +247,11 @@
 }
 
 .footerClassDiv{
- background-color: rgb(250, 255, 240);
+ background-color: rgb(208, 242, 245);
  margin-top: 10px;
- width: 90%;
- margin-left: 100px;
+ width: 100%;
+ position: sticky;
+ /* margin-left: 100px; */
 }
 
 .footer-about{
