--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,40 @@
   font-weight: bold;
 }
 
+.dropDown{
+  position: relative;
+  display: inline-block;
+  margin-left: 7px;
+}
+
+.menuItems{
+  display: none;
+  position: absolute;
+  min-width: 200px;
+  z-index: 1;
+  background-color: rgb(236, 195, 195);
+}
+
+.menuItems a{
+  padding: 12px 16px;
+  display: block;
+  border-bottom: 1px solid lightgray;
+}
+
+.menuItems a:hover{
+  border-left: 3px solid #e21216;
+  background-color: aliceblue;
+  border-radius: 50px;
+}
+
+.dropDown:hover .menuItems{ 
+  display: block;
+}
+
+.dropDown:hover .menu{
+   text-decoration: underline 2px solid #e21216;
+  }
+
 .bodyTextClass{
   background-color: blue;
   width: 1000px;
@@ -193,6 +227,9 @@
   /* margin-left: 15px; */
   margin-right: 25px; 
 }
+.commingsoonMovieListImagesClass{
+  margin-top: 20px;
+}
 
 .commingsoonimagesDiv{
   display: flex;
@@ -214,18 +251,21 @@
   margin-left: 0px;
   margin-right: 20px;
   margin-top: 30px;
+
   
 }
 
 .imgclass:hover{
-  /* z-index: 1;
+    /* transform: scale(1.1);
+    transition: all 0.5s; */
+  /* z-index: 1; */
   border: solid white;
   border-radius: 5px;
-  transition-property: transform;
-  transition-duration: 0.1s;
-  transition:scale(1);
-  transition-delay: 0s;
-  transition-timing-function: ease; */
+  /* transition-property:transform; 
+   transition-duration: 0.1s;
+  transition:scale(2);
+  transition-delay: 0s; */
+  /* transition-timing-function: ease;  */
   cursor: pointer;
 }
 
