--- a/src/App.css
+++ b/src/App.css
@@ -256,11 +256,11 @@
 }
 
 .imgclass:hover{
-    /* transform: scale(1.1);
-    transition: all 0.5s; */
+    transform: scale(1.1);
+    transition: all 0.5s;
   /* z-index: 1; */
-  border: solid white;
-  border-radius: 5px;
+  /* border: solid white;
+  border-radius: 5px; */
   /* transition-property:transform; 
    transition-duration: 0.1s;
   transition:scale(2);
